Dependencies dialog - dropdown width fix, edit on some items not showing

--- a/ui/scss/_cstudio-view.scss
+++ b/ui/scss/_cstudio-view.scss
@@ -239,7 +239,8 @@
 
   .studio-view {
     .dependencies-option {
-      width: 165px;
+      width: initial;
+      min-width: 160px;
       //margin-top: 10px;
       margin-bottom: 10px;
       margin-left: 10px;
